--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require-dev": {
+        "silex/silex": "~1.1",
         "phpunit/phpunit": "7.5.*",
         "phpunit/dbunit": "4.0.*",
         "moodlehq/behat-extension": "3.39.3",
