--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require": {
+        "php": "7.3",
         "silex/silex": "~1.1",
         "phpunit/phpunit": "7.5.*",
         "phpunit/dbunit": "4.0.*",
