--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,16 @@
             "url": "https://github.com/moodlehq/php-webdriver.git"
         }
     ],
-    "require": {
+        "require": {
         "php": "7.3",
-        "silex/silex": "~1.1",
+        "ext-gd": "*",
+        "ext-intl": "*",
+        "ext-mbstring": "*",
+        "ext-soap": "*",
+        "ext-xmlrpc": "*"
+    },
+    
+    "require-dev": {
         "phpunit/phpunit": "7.5.*",
         "phpunit/dbunit": "4.0.*",
         "moodlehq/behat-extension": "3.39.3",
